@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2021-05-13 r80290) -- "Unsuffered Consequences"
+R Under development (unstable) (2021-05-17 r80307) -- "Unsuffered Consequences"
 Copyright (C) 2021 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -7240,16 +7240,21 @@ sigma^2 estimated as 0.001499:  log likelihood = 163.79,  aic = -315.58
 > ## failed on mismatched attributes
 > 
 > 
-> ## PR#15411, plus digits change
+> ## PR#15411; PR#18098 ==> digits=0 not ok:
 > format(9992, digits = 3)
 [1] "9992"
 > format(9996, digits = 3)
 [1] "9996"
-> format(0.0002, digits = 0, nsmall = 2)
-[1] "0.00"
-> format(pi*10, digits = 0, nsmall = 1)
+> format(0.0002, digits = 1, nsmall = 2, scientific = FALSE)
+[1] "0.0002"
+> assertErrorV(
++ format(pi*10,  digits = 0))
+Asserted error: invalid 'digits' argument
+> format(pi*10,  digits = 1)
+[1] "31"
+> format(pi*10,  digits = 1, nsmall = 1)
 [1] "31.4"
-> ## second added an extra space; 3rd and 4th were not allowed.
+> ## second added an extra space.
 > 
 > ## and one branch of this was wrong:
 > xx <- c(-86870268, 107833358, 302536985, 481015309, 675718935, 854197259,
